# SPIDEC_paper

./: pyproject.toml
rocket/: pyproject.toml
sigtools/: pyproject.toml  transforms.py
topological/: mp_ecg_make_mpdist_spidec_comparisons.py
tsprofiles/: pyproject.toml
umap_torch/: layouts.py  pyproject.toml  utils.py
