[project]
name = "rocket"
version = "0.1.0"
description = "Rocket time series transformer"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "numba",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["rocket", "_rocket_numba"]
