[project]
name = "tsprofiles"
version = "0.1.0"
description = "Time series profiling functions"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "scipy",
    "scikit-learn",
    "pykeops",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["functions", "umap_utils", "dict_merge"]
